# code-jam-24-universes

./: .gitignore  LICENSE.txt  README.md  diff.txt  example.env  pyproject.toml
.docker/: Dockerfile
.github/workflows/: docker.yml
src/: __main__.py  ad.py  ads.json  bot.py  constants.py  database.py  logger.py
src/exts/: info.py  minigames.py
src/exts/test/: test_ad.py
src/views/: shoot.py
